--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <p>Opis <a href="#">Zobacz</a></p>
     </section>
     </section>
+    </section>
     <section id="skills" class="section-container">
       <h2>Umiejetnosci</h2>
       <div id="skills-container">
