ulepszenie styli i formularza

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       <div>
       <h2>O mnie</h2>
       <p>Cześć, mam na imię Antek i uczę się w technikum na kierunku technik programista. Interesuję się technologią i programowaniem. Poza nauką lubię ćwiczyć na siłowni i grać w piłkę nożną. Stale poszerzam swoją wiedzę i rozwijam umiejętności – zarówno w kodowaniu, jak i w życiu codziennym. Szukam projektów, które pozwolą mi się uczyć w praktyce i podnosić swój poziom.</p>
+      <ul class="external-links-list">
+        <li><a href="https://github.com/Antoni40">github</a></li>
+        <li><a href="https://www.credly.com/users/antoni-lubomski">Credly</a></li>
+      </ul>
       </div>
       <figure>
       <img src="images/zdjecie.png" alt="moje zdjecie">
@@ -40,17 +44,17 @@
     </section>
     <section class="project-item" class="section-container">
         <img src="images/project-image-1.jpg" alt="zdjęcie związane z projektem" class="project-image">
-        <h3>Projekt 1</h3>
+        <h3>Projekt 2</h3>
         <p>Opis <a href="#">Zobacz</a></p>
     </section>
     <section class="project-item" class="section-container">
         <img src="images/project-image-1.jpg" alt="zdjęcie związane z projektem" class="project-image">
-        <h3>Projekt 1</h3>
+        <h3>Projekt 3</h3>
         <p>Opis <a href="#">Zobacz</a></p>
     </section>
     <section class="project-item" class="section-container">
         <img src="images/project-image-1.jpg" alt="zdjęcie związane z projektem" class="project-image">
-        <h3>Projekt 1</h3>
+        <h3>Projekt 4</h3>
         <p>Opis <a href="#">Zobacz</a></p>
     </section>
     </section>
@@ -63,6 +67,9 @@
         <div id="cpp-skill"><p>Programowanie obiektowe w C++</p></div>
       </div>
     </section>
+    <section id="accomplishments" class="section-container">
+      <h2>Osiągnięcia</h2>
+    </section>
     <section id="contact" class="section-container">
       <h2>Kontakt</h2>
       <form action="">
@@ -71,7 +78,8 @@
         <label for="email">Email</label>
         <input type="email" id="email">
         <label for="message">Wiadomość</label>
-        <textarea id="message" ></textarea>
+        <textarea id="message"></textarea>
+        <button type="submit">Wyślij</button>
         </fieldset>
       </form>
     </section>
