--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       </ul>
       </div>
       <figure>
-      <img src="images/zdjecie.png" alt="moje zdjecie">
-      <figcaption>Tu może będzie moje zdjęcie</figcaption>
+      <img src="images/moje-zdjecie.jpg" alt="moje zdjecie">
+      <figcaption>To jestem ja (kiedyś zrobie lepsze zdjęcie)</figcaption>
       </figure>
     </article>
     <section id="projects" class="section-container">
