--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
     <h2>Projekty</h2>
       <section class="projects-container">
       <section class="project-item">
-        <img src="images/project-image-1.jpg" alt="zdjęcie związane z projektem" class="project-image">
+        <img src="images/project-image-1.jpg" style="object-position: top;" alt="zdjęcie związane z projektem" class="project-image">
         <h3>Projekt 1</h3>
-        <p>Opis <a href="#">Zobacz</a></p>
+        <p>Opis <a href="to_do_list/index.html">Zobacz</a></p>
     </section>
     <section class="project-item" class="section-container">
-        <img src="images/project-image-1.jpg" alt="zdjęcie związane z projektem" class="project-image">
+        <img src="images/project-image.jpg" alt="zdjęcie związane z projektem" class="project-image">
         <h3>Projekt 2</h3>
         <p>Opis <a href="#">Zobacz</a></p>
     </section>
     <section class="project-item" class="section-container">
-        <img src="images/project-image-1.jpg" alt="zdjęcie związane z projektem" class="project-image">
+        <img src="images/project-image.jpg" alt="zdjęcie związane z projektem" class="project-image">
         <h3>Projekt 3</h3>
         <p>Opis <a href="#">Zobacz</a></p>
     </section>
     <section class="project-item" class="section-container">
-        <img src="images/project-image-1.jpg" alt="zdjęcie związane z projektem" class="project-image">
+        <img src="images/project-image.jpg" alt="zdjęcie związane z projektem" class="project-image">
         <h3>Projekt 4</h3>
         <p>Opis <a href="#">Zobacz</a></p>
     </section>
