--- a/to_do_list/index.html
+++ b/to_do_list/index.html
@@ -8,9 +8,9 @@
     <meta charset="UTF-8">
   </head>
   <body>
-    <head>
+    <header>
       <h1>To-Do lista</h1>
-    </head>
+    </header>
     <section id="add-task-section">
       <input type="text" id="add-task-input" placeholder="Wpisz nowe zadanie">
       <button id="add-task-button">Dodaj zadanie</button>
